syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.udemy.grpc.masterclass.shared.proto.models";


message EmailOTP {
  string email = 1;
  string password = 2;
}

message PhoneOTP {
  int32 number = 1;
  int32 code = 2;
}

message Credentials {
  oneof mode {
    EmailOTP emailMode = 1;
    PhoneOTP phoneMode = 2;
  }
}